--- a/src/assets/styles/commons.scss
+++ b/src/assets/styles/commons.scss
@@ -13,6 +13,13 @@ $padding-20: 20px;
     padding: 0;
     margin: 0;
 }
+html,
+body {
+    width: 100%;
+}
 li {
     list-style: none;
+}
+a {
+    text-decoration: none;
 }
