--- a/src/assets/styles/commons.scss
+++ b/src/assets/styles/commons.scss
@@ -23,3 +23,18 @@ li {
 a {
     text-decoration: none;
 }
+::-webkit-scrollbar {
+    /*滚动条整体样式*/
+    width: 10px; /*高宽分别对应横竖滚动条的尺寸*/
+    height: 10px;
+}
+::-webkit-scrollbar-thumb {
+    /*滚动条里面小方块*/
+    border-radius: 10px;
+    background: rgba($color: #3b73f0, $alpha: 0.8);
+}
+::-webkit-scrollbar-track {
+    /*滚动条里面轨道*/
+    border-radius: 10px;
+    background: rgba($color: #3b73f0, $alpha: 0.3);
+}
