--- a/src/assets/styles/commons.scss
+++ b/src/assets/styles/commons.scss
@@ -23,6 +23,15 @@ li {
 a {
     text-decoration: none;
 }
+
+input,
+textarea{
+    outline:none;
+}
+
+
+
+
 ::-webkit-scrollbar {
     /*滚动条整体样式*/
     width: 10px; /*高宽分别对应横竖滚动条的尺寸*/
